<resources>
    <string name="app_name">DatabaseConnectivity</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_brand">Product Brand</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
</resources>
