<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <EditText
        android:id="@+id/productID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/product_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/product_brand"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <EditText
        android:id="@+id/productBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_brand" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/product_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/product_quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity" />

</LinearLayout>